15-09-2018 - [B]1.1.0[/B]
- Added the second live stream from Faros
- New nested menu for choosing Faros live stream

23-03-2018 - [B]1.0.5[/B]
- Improved conditional for first time setup
- Added radio and presentation options
- Cosmetics

14-03-2018 - [B]1.0.4[/B]
- Various enhancements

08-01-2018 - [B]1.0.3[/B]
- Re-applied bookmarks function for non-standalone setups
- Navigator function root menu tweaks
- Various icon optimizations
- Cosmetics

05-01-2018 - [B]1.0.2[/B]
- Youtube API key is now set in its proper form
- External links button is now displayed only on Android
- Added switch in settings to display exit button
- Merged addon branches, there is no a standalone version anymore
- Removed force view option
- ACZG Skin: Tooltip removed from weather window
- Removed repo extension point, updates will be pushed from play store

03-01-2018 - [B]1.0.1[/B]
- Skipped version number to match that on apk

03-01-2018 - [B]1.0.0[/B]
- Initial Version