@@ -1,3 +1,7 @@
+29-10-2019 - [B]1.2.0[/B]
+- New stream urls
+- Some other minor changes
+
 15-09-2018 - [B]1.1.0[/B]
 - Added the second live stream from Faros
 - New nested menu for choosing Faros live stream
